--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chronelab.roomdatabase" >
+    package="com.chronelab.madas2schoolconnectapp">
 
     <application
         android:name=".RoomApplication"
@@ -9,7 +9,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RoomDatabase" >
+        android:theme="@style/Theme.SchoolConnect">
+
+
+        <activity
+            android:name=".activity.AdminDashboardActivity"
+            android:exported="false" />
+
         <activity
             android:name=".NotificationActivity"
             android:exported="false" />
@@ -18,7 +24,7 @@
             android:exported="true" />
         <activity
             android:name=".activity.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,8 +40,6 @@
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.MessagesActivity" />
         <activity android:name=".activity.SettingsActivity" />
-        <activity android:name=".activity.UserProfileActivity" />
-
     </application>
 
 </manifest>
